# LibWindowNavigator

./: .gitignore  README.md  meson.build
include/: gui.h  search.h  utils.h  window_utils.h
src/: gui.cpp  main.cpp  search.cpp  utils.cpp  window_utils.cpp
subprojects/: libpng.wrap  rapidfuzz.wrap  zlib.wrap
